--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mongodb": "^5.7.0",
     "next": "10.0.6",
     "postcss": "^8.4.27",
+    "postcss-scss": "^4.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
